openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab-test
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gitlab
