openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab
  namespace: gitlab-test
spec:
  to:
    kind: Service
    name: gitlab
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
